Implemented command line parameters.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+data
+robby-backend/target
 
 # Created by https://www.gitignore.io/api/node,java,intellij
 # Edit at https://www.gitignore.io/?templates=node,java,intellij
